rest api index reading also includes all subindex data

--- a/olaf/_internals/rest_api/templates/base.html
+++ b/olaf/_internals/rest_api/templates/base.html
@@ -40,7 +40,7 @@
      */
     async function readValue(index, subindex) {
       let url = `http://${window.location.host}/od/${index}`;
-      if (subindex !== null || subindex !== '') {
+      if (subindex !== null && subindex !== '') {
         url = `http://${window.location.host}/od/${index}/${subindex}`;
       }
 
