minor changes to updater

--- a/olaf/_internals/rest_api/templates/updater.html
+++ b/olaf/_internals/rest_api/templates/updater.html
@@ -47,7 +47,7 @@
         document.getElementById('startUpdateButton').disabled = true;
         document.getElementById('makeStatusFileButton').disabled = true;
       } else {
-        if (updatesObj.value === false) {
+        if (updatesObj.value === 0) {
           document.getElementById('startUpdateButton').disabled = true;
           document.getElementById('makeStatusFileButton').disabled = false;
         } else {
