fix a bug with writing a value to the rest api

--- a/olaf/_internals/rest_api/templates/base.html
+++ b/olaf/_internals/rest_api/templates/base.html
@@ -71,7 +71,7 @@
       };
       
       let url = `http://${window.location.host}/od/${index}`;
-      if (subindex !== null || subindex !== '') {
+      if (subindex !== null && subindex !== '') {
         url = `http://${window.location.host}/od/${index}/${subindex}`;
       }
 
