--- a/olaf/_internals/rest_api/templates/od.html
+++ b/olaf/_internals/rest_api/templates/od.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends "base.html" %}
 
 {% block content %}
   <style>
@@ -20,14 +20,14 @@
       display: none;
     }
   </style>
-  <label for='objIndex'>Index:</label>
-  <input type='text' id='objIndex' name='objIndex' placeholder='0x1000'/>
-  <label for='objSubindex'>Subindex:</label>
-  <input type='text' id='objSubindex' name='objSubindex' placeholder='0x00'/>
+  <label for="objIndex">Index:</label>
+  <input type="text" id="objIndex" name="objIndex" placeholder="0x1000"/>
+  <label for="objSubindex">Subindex:</label>
+  <input type="text" id="objSubindex" name="objSubindex" placeholder="0x00"/>
   <button onclick="getObjectInfo()">Get Info</button>
   <br/>
   <br/>
-  <div id='variableObj'>
+  <div id="variableObj">
     <table>
       <tr>
         <td>Object Type</td>
@@ -35,82 +35,82 @@
       </tr>
       <tr>
         <td>Name</td>
-        <td><span id='varName'></span></td>
+        <td><span id="varName"></span></td>
       </tr>
       <tr>
         <td>Data Type</td>
-        <td><span id='varDataType'></span></td>
+        <td><span id="varDataType"></span></td>
       </tr>
       <tr>
         <td>Access Type</td>
-        <td><span id='varAccessType'></span></td>
+        <td><span id="varAccessType"></span></td>
       </tr>
       <tr>
         <td>Value</td>
-        <td><span id='varValue'></span></td>
+        <td><span id="varValue"></span></td>
       </tr>
     </table>
     <br/>
-    <div id='varNewValueInput'>
-      <label for='objNewValue'>New Value:</label>
-      <input type='text' id='objNewValue' name='objNewValue'/>
-      <button id='setObjectValueButton' onclick="setObjectValue()">Change</button>
+    <div id="varNewValueInput">
+      <label for="objNewValue">New Value:</label>
+      <input type="text" id="objNewValue" name="objNewValue"/>
+      <button id="setObjectValueButton" onclick="setObjectValue()">Change</button>
     </div>
   </div>
-  <div id='arrayRecordObj'>
+  <div id="arrayRecordObj">
     <table>
       <tr>
         <td>Object Type</td>
-        <td><span id='objType'></span></td>
+        <td><span id="objType"></span></td>
       </tr>
       <tr>
         <td>Name</td>
-        <td><span id='objName'></span></td>
+        <td><span id="objName"></span></td>
       </tr>
       <tr>
         <td>Subindexes</td>
-        <td><span id='objSubindexes'></span></td>
+        <td><span id="objSubindexes"></span></td>
       </tr>
     </table>
   </div>
   <script>
     async function updateData() {
-      const index = document.getElementById('objIndex').value;
-      const subindex = document.getElementById('objSubindex').value;
+      const index = document.getElementById("objIndex").value;
+      const subindex = document.getElementById("objSubindex").value;
 
-      if (index === '') {
-        alert('requires at least the index field to be set')
+      if (index === "") {
+        alert("error: requires at least the index field to be set")
         return;
       }
 
       const obj = await readValue(index, subindex);
 
-      if (obj['error'] !== undefined) {
-        document.getElementById('variableObj').style.display = 'none';
-        document.getElementById('arrayRecordObj').style.display = 'none';
+      if (obj["error"] !== undefined) {
+        document.getElementById("variableObj").style.display = "none";
+        document.getElementById("arrayRecordObj").style.display = "none";
 
-        alert(obj['error']);
-      } else if (obj['object_type'] === 'VARIABLE') {
-        document.getElementById('variableObj').style.display = 'inline';
-        document.getElementById('arrayRecordObj').style.display = 'none';
+        alert(error: obj["error"]);
+      } else if (obj["object_type"] === "VARIABLE") {
+        document.getElementById("variableObj").style.display = "inline";
+        document.getElementById("arrayRecordObj").style.display = "none";
 
-        document.getElementById('varName').textContent = obj.name;
-        document.getElementById('varDataType').textContent = obj.data_type;
-        document.getElementById('varAccessType').textContent = obj.access_type;
-        document.getElementById('varValue').textContent = obj.value;
+        document.getElementById("varName").textContent = obj.name;
+        document.getElementById("varDataType").textContent = obj.data_type;
+        document.getElementById("varAccessType").textContent = obj.access_type;
+        document.getElementById("varValue").textContent = obj.value;
 
-        if (obj.access_type === 'ro' || obj.access_type === 'const') {
-          document.getElementById('varNewValueInput').style.display = 'none';
+        if (obj.access_type === "ro" || obj.access_type === "const") {
+          document.getElementById("varNewValueInput").style.display = "none";
         } else {
-          document.getElementById('varNewValueInput').style.display = 'inline';
+          document.getElementById("varNewValueInput").style.display = "inline";
         }
       } else {
-        document.getElementById('variableObj').style.display = 'none';
-        document.getElementById('arrayRecordObj').style.display = 'inline';
+        document.getElementById("variableObj").style.display = "none";
+        document.getElementById("arrayRecordObj").style.display = "inline";
 
-        document.getElementById('objType').textContent = obj.object_type;
-        document.getElementById('objName').textContent = obj.name;
-        document.getElementById('objSubindexes').textContent = Object.keys(obj.subindexes).length;
+        document.getElementById("objType").textContent = obj.object_type;
+        document.getElementById("objName").textContent = obj.name;
+        document.getElementById("objSubindexes").textContent = Object.keys(obj.subindexes).length;
       }
     }
 
@@ -119,12 +119,12 @@
     }
 
     function setObjectValue() {
-      const index = document.getElementById('objIndex').value;
-      const subindex = document.getElementById('objSubindex').value;
-      const value = document.getElementById('varNewValueInput').value;
+      const index = document.getElementById("objIndex").value;
+      const subindex = document.getElementById("objSubindex").value;
+      const value = document.getElementById("varNewValueInput").value;
 
-      if (index === '') {
-        alert('requires at least the index field to be set')
+      if (index === "") {
+        alert("error: requires at least the index field to be set")
         return;
       }
 
