--- a/olaf/_internals/rest_api/templates/root.html
+++ b/olaf/_internals/rest_api/templates/root.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang='en'>
+<html lang="en">
 <head>
   <title>{{title}}</title>
 </head>
@@ -9,7 +9,7 @@
       text-align: center;
     }
   </style>
-  <h2 id='pageTitle'>{{title}}</h2>
+  <h2 id="pageTitle">{{title}}</h2>
   <br/>
   <a>Endpoints:</a>
   <br/>
