--- a/olaf/_internals/rest_api/templates/fwrite.html
+++ b/olaf/_internals/rest_api/templates/fwrite.html
@@ -1,13 +1,14 @@
-{% extends 'base.html' %}
+{% extends "base.html" %}
 
 {% block content %}
-  <label for='filename'>File:</label>
-  <input type='file' id='filename' name='filename'/>
-  <button onclick='uploadFile()'>Upload</button>
+  <label for="filename">File:</label>
+  <input type="file" id="filename" name="filename"/>
+  <button onclick="uploadFile()">Upload</button>
+  <p><b>NOTE:</b> All file must be in <i>card_keyword_unixtime.extension</i> format</p>
   <script>
     /** Callback when the upload button is clicked. */
     function uploadFile() {
-      const file = document.getElementById('filename').files[0];
+      const file = document.getElementById("filename").files[0];
 
       const fileReader = new FileReader();
       fileReader.readAsBinaryString(file);
@@ -15,7 +16,7 @@
         fwrite(file.name, fileReader.result);
       }
       fileReader.onerror = function() {
-        alert(fileReader.error);
+        alert("error: " + fileReader.error);
       }
     }
 
@@ -27,19 +28,19 @@
      */
     async function fwrite(fileName, fileData) {
      // Write the file name to OD.
-      const obj = await writeValue('0x3004','0x01', fileName);
+      const obj = await writeValue("0x3004","0x01", fileName);
 
-      // Validate the file name was set to new value in OD, if it wasn't it was not a
+      // Validate the file name was set to new value in OD, if it wasn"t it was not a
       // valid file name.
       if (obj.value !== fileName) {
-        alert('fwrite failed due to an invalid file name format');
+        alert("error: fwrite failed due to an invalid file name format");
         return;
       }
 
      // Write the file data to OD.
-      await writeValue('0x3004','0x02', btoa(fileData));
+      await writeValue("0x3004","0x02", btoa(fileData));
       
-      alert('fwrite was successful');
+      alert("fwrite was successful");
     }
   </script>
 {% endblock %}
