--- a/olaf/_internals/rest_api/templates/updater.html
+++ b/olaf/_internals/rest_api/templates/updater.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends "base.html" %}
 
 {% block content %}
   <style>
@@ -17,56 +17,56 @@
   <table>
     <tr>
       <td>Status</td>
-      <td><span id='status'></span></td>
+      <td><span id="status"></span></td>
     </tr>
     <tr>
       <td>Updates Available</td>
-      <td><span id='updatesAvailable'></span></td>
+      <td><span id="updatesAvailable"></span></td>
     </tr>
   </table>
   <br/>
-  <button id='startUpdateButton' onclick='startUpdate()' disabled>Start Update</button>
-  <button id='makeStatusFileButton' onclick='makeStatusFile()'>Generate Status File</button>
+  <button id="startUpdateButton" onclick="startUpdate()" disabled>Start Update</button>
+  <button id="makeStatusFileButton" onclick="makeStatusFile()">Generate Status File</button>
   <script>
     const STATES = {
-      0: 'UPDATE_SUCCESSFUL',
-      1: 'PRE_UPDATE_FAILED',
-      2: 'UPDATE_FAILED',
-      255: 'UPDATING',
+      0: "UPDATE_SUCCESSFUL",
+      1: "PRE_UPDATE_FAILED",
+      2: "UPDATE_FAILED",
+      255: "UPDATING",
     }
 
     async function updaterInfo() {
-      const statusObj = await readValue('0x3100', '0x01');
+      const statusObj = await readValue("0x3100", "0x01");
       const newState = STATES[statusObj.value];
-      document.getElementById('status').textContent = newState;
+      document.getElementById("status").textContent = newState;
 
-      const updatesObj = await readValue('0x3100', '0x02');
-      document.getElementById('updatesAvailable').textContent = updatesObj.value;
+      const updatesObj = await readValue("0x3100", "0x02");
+      document.getElementById("updatesAvailable").textContent = updatesObj.value;
 
-      if (newState === 'UPDATING') {
-        document.getElementById('startUpdateButton').disabled = true;
-        document.getElementById('makeStatusFileButton').disabled = true;
+      if (newState === "UPDATING") {
+        document.getElementById("startUpdateButton").disabled = true;
+        document.getElementById("makeStatusFileButton").disabled = true;
       } else {
         if (updatesObj.value === 0) {
-          document.getElementById('startUpdateButton').disabled = true;
-          document.getElementById('makeStatusFileButton').disabled = false;
+          document.getElementById("startUpdateButton").disabled = true;
+          document.getElementById("makeStatusFileButton").disabled = false;
         } else {
-          document.getElementById('startUpdateButton').disabled = false;
-          document.getElementById('makeStatusFileButton').disabled = false;
+          document.getElementById("startUpdateButton").disabled = false;
+          document.getElementById("makeStatusFileButton").disabled = false;
         }
       }
     }
 
     async function startUpdate() {
-      document.getElementById('startUpdateButton').disabled = false;
-      document.getElementById('makeStatusFileButton').disabled = true;
-      writeValue('0x3100', '0x04', true);
+      document.getElementById("startUpdateButton").disabled = false;
+      document.getElementById("makeStatusFileButton").disabled = true;
+      writeValue("0x3100", "0x04", true);
     }
 
     async function makeStatusFile() {
-      document.getElementById('startUpdateButton').disabled = true;
-      document.getElementById('makeStatusFileButton').disabled = false;
-      writeValue('0x3100', '0x05', true);
+      document.getElementById("startUpdateButton").disabled = true;
+      document.getElementById("makeStatusFileButton").disabled = false;
+      writeValue("0x3100", "0x05", true);
     }
 
     updaterInfo();
