update rest api for olaf v3
/od/index and /od/index/subindex now support object names

--- a/olaf/_internals/rest_api/templates/base.html
+++ b/olaf/_internals/rest_api/templates/base.html
@@ -48,7 +48,7 @@
         .then(response => response.json())
         .then(data => {
           if (data.error !== undefined) {
-            console.log(data);
+            console.error(data.error);
           }
           return data;
         });
@@ -84,7 +84,7 @@
         .then(response => response.json())
         .then(data => {
           if (data.error !== undefined) {
-            console.log(data);
+            console.error(data.error);
           }
           return data;
         });
