--- a/olaf/_internals/rest_api/templates/updater.html
+++ b/olaf/_internals/rest_api/templates/updater.html
@@ -36,11 +36,11 @@
     }
 
     async function updaterInfo() {
-      const statusObj = await readValue("0x3100", "0x01");
+      const statusObj = await readValue("common_data", "updater_status");
       const newState = STATES[statusObj.value];
       document.getElementById("status").textContent = newState;
 
-      const updatesObj = await readValue("0x3100", "0x02");
+      const updatesObj = await readValue("common_data", "update_cache_len");
       document.getElementById("updatesAvailable").textContent = updatesObj.value;
 
       if (newState === "UPDATING") {
@@ -60,13 +60,13 @@
     async function startUpdate() {
       document.getElementById("startUpdateButton").disabled = false;
       document.getElementById("makeStatusFileButton").disabled = true;
-      writeValue("0x3100", "0x04", true);
+      writeValue("common_data", "update", true);
     }
 
     async function makeStatusFile() {
       document.getElementById("startUpdateButton").disabled = true;
       document.getElementById("makeStatusFileButton").disabled = false;
-      writeValue("0x3100", "0x05", true);
+      writeValue("common_data", "make_updater_status_file", true);
     }
 
     updaterInfo();
